// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
"// basic.d.ts
//#region tests/fixtures/basic.d.ts
declare const foo: number;
type SomeType<T> = T;
type FooType = string;
interface Interface {}
declare function fn(arg0: SomeType<FooType>, opt: Interface): void;
declare enum Enum {
  A = 0,
  B = 1,
  C = 2,
}
declare class Cls {
  foo: string;
  fn(e: Enum): void;
}
//#endregion
export { Cls, Enum, fn, foo };
// basic.js
//#region tests/fixtures/basic.ts
const foo = 42;
function fn(arg0, opt) {}
let Enum = /* @__PURE__ */ function(Enum$1) {
	Enum$1[Enum$1["A"] = 0] = "A";
	Enum$1[Enum$1["B"] = 1] = "B";
	Enum$1[Enum$1["C"] = 2] = "C";
	return Enum$1;
}({});
var Cls = class {
	foo;
	fn(e) {}
};

//#endregion
export { Cls, Enum, fn, foo };"
`;

exports[`dts input 1`] = `
"// index.d.ts
//#region tests/fixtures/dts-input.d.ts
declare class Foo {}
//#endregion
export { Foo };"
`;

exports[`input alias 1`] = `
"// input2-CcmD5Ns-.d.ts
//#region shared.d.ts
interface Shared {
  shared: string;
}
declare const shared: Shared;
//#endregion
//#region input2.d.ts
interface Input2 extends Shared {
  input2: string;
}
declare const input2: Input2;
//#endregion
export { Input2, input2 };
// input2-LCiYuoaZ.js
//#region shared.ts
const shared = { shared: "shared" };

//#endregion
//#region input2.ts
const input2 = {
	...shared,
	input2: "input2"
};

//#endregion
export { input2 };
// output1.d.ts
import { Input2 } from "./input2-CcmD5Ns-.js";

//#region input1.d.ts
interface Input1 extends Input2 {
  input1: string;
}
declare const input1: Input1;
//#endregion
export { Input1, input1 };
// output1.js
import { input2 } from "./input2-LCiYuoaZ.js";

//#region input1.ts
const input1 = {
	...input2,
	input1: "input1"
};

//#endregion
export { input1 };
// output2/index.d.ts
import { Input2, input2 } from "../input2-CcmD5Ns-.js";
export { Input2, input2 };
// output2/index.js
import { input2 } from "../input2-LCiYuoaZ.js";

export { input2 };"
`;

exports[`paths 1`] = `
"// index.d.ts
//#region tests/fixtures/paths/mod.d.ts
declare const foo = 42;
//#endregion
export { foo };"
`;

exports[`resolve dts 1`] = `
"// index.d.ts
//#region tests/fixtures/resolve-dts/mod.d.ts
type Foo = string;
//#endregion
export { Foo };
// index.js
"
`;

exports[`tree-shaking 1`] = `
"// index.d.ts
//#region tests/fixtures/tree-shaking/mod.d.ts

type A = string;
//#endregion
export { A };
// index.js
"
`;

exports[`tsx 1`] = `
"// tsx.d.ts
import { JSX } from "solid-js";

//#region tests/fixtures/tsx.d.ts
declare function createComponent(): JSX.HTMLAttributes<HTMLElement>;
//#endregion
export { createComponent };
// tsx.js
import { jsx } from "react/jsx-runtime";

//#region tests/fixtures/tsx.tsx
function createComponent() {
	return /* @__PURE__ */ jsx("div", {});
}

//#endregion
export { createComponent };"
`;
